WIP interactables, types, interaction modal
